# triangle

./: .gitignore  .gitmodules  .travis.yml  CHEATSHEET  CMakeLists.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  release.sh  requirements.txt  setup.py  upload_docs.sh
.github/workflows/: wheels.yml
c/: CMakeLists.txt  triangle.c  triangle.h  triangle_ext.c  tricall.c
doc/: Makefile  conf.py  convex.rst  data.rst  definitions.rst  delaunay.rst  examples.rst  index.rst  installing.rst  quality.rst  readme.rst  refine.rst  voronoi.rst
doc/plot/: PSLG.py  api_convex_hull.py  api_voronoi.py  bndries.py  conforming_delaunay.py  conforming_delaunay1.py  constrained_conforming_delaunay.py  constrained_conforming_delaunay1.py  constrained_delaunay.py  constrained_delaunay1.py  convex_hull.py  convex_hull1.py  delaunay.py  delaunay1.py  delaunay2.py  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex7.py  face.py  holes_cavities.py  quality.py  quality1.py  quality2.py  refine.py  refine1.py  refine2.py  voronoi.py  voronoi1.py  voronoi3.py
doc/source/: API.rst  conf.py  data.rst  delaunay.rst  examples.rst  index.rst
doc/source/plot/: PSLG.py  api_delaunay.py  api_triangulate.py  conforming_delaunay.py  conforming_delaunay1.py  constrained_conforming_delaunay.py  constrained_delaunay.py  constrained_delaunay1.py  convex_hull.py  (+13 more)
testing/: test_triangle.py
tests/: test_triangle.py
triangle/: CMakeLists.txt  __init__.py  c_triangle.pxd  core.c  core.pyx  data.py  plot.py  tri.py  triangle.py  version.py
triangle/sphinxext/: code.jinja2  plot.jinja2  plot.py
